--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -40,18 +40,18 @@
                         <p>
                           <img src="assets/imgs/view.png">
                            <!--  <ion-icon name="eye"></ion-icon> -->
-                            <i>2k</i>
+                            <i>{{post.post_comment_count}}</i>
                         </p>
                         <p>
                             <img src="assets/imgs/like.png">
                           
                             <!-- <ion-icon name="heart"></ion-icon> -->
-                            <i>2k</i>
+                            <i>{{post.post_likes_count}}</i>
                         </p>
                         <p>
                             <img src="assets/imgs/share.png">                          
                             <!-- <ion-icon name="md-share"></ion-icon> -->
-                            <i>2k</i>
+                            <i>{{post.post_share_count}}</i>
                         </p>
                     </div>
                 </div>
